  [This bug was present in "the beginning".]

  install -m M SOURCE DEST no longer has a race condition where DEST's
  permissions are temporarily derived from SOURCE instead of from M.

  pr -n no longer crashes when passed values >= 32.  Also line numbers are
  consistently padded with spaces, rather than with zeros for certain widths.
  [bug introduced in TEXTUTILS-1_22i]

** Changes in behavior

  df --total now prints '-' into the target column (mount point) of the
  summary line, accommodating to the --output option where the target
  field can be in any column.  If there is no source column, then df
  prints 'total' into the target column.

  nl no longer supports the --page-increment option which was deprecated
  since coreutils-7.5.  Use --line-increment instead.

** Build-related

  Perl is now more of a prerequisite.  It has long been required in order
  to run (not skip) a significant percentage of the tests.  Now, it is
  also required in order to generate proper man pages, via help2man. The
  generated man/*.1 man pages are no longer distributed.  Building without
  perl, you would create stub man pages.  Thus, while perl is not an
  official prerequisite (build and "make check" will still succeed), any
  resulting man pages would be inferior.  In addition, this fixes a bug
  in distributed (not from clone) Makefile.in that could cause parallel
  build failure when building from modified sources, as is common practice
  for a patched distribution package.

  The check in the root-only tests to test whether our dummy user,
  $NON_ROOT_USERNAME, is able to run binaries from the build directory
  failed.  As a result, these tests have been skipped unnecessarily.
  [bug introduced in coreutils-8.20]


* Noteworthy changes in release 8.20 (2012-10-23) [stable]

** New features

  dd now accepts 'status=none' to suppress all informational output.

  md5sum now accepts the --tag option to print BSD-style output with GNU