@@ -367,6 +367,7 @@ Marc Haber                          mh+debian-bugs@zugschlus.de
 Marc Mengel                         mengel@fnal.gov
 Marc Lehman                         schmorp@schmorp.de
 Marc Olzheim                        marcolz@stack.nl
+Marcel Böhme                        http://www.comp.nus.edu.sg/~mboehme
 Marco Franzen                       Marco.Franzen@Thyron.com
 Marcus Brinkmann                    http://www.marcus-brinkmann.de
 Marcus Daniels                      marcus@ee.pdx.edu
